internal/xds/translator/testdata/out/xds-ir/oidc-provider-traffic-features.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - www.example.com
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/www_example_com
    routes:
    - match:
        pathSeparatedPrefix: /foo
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/0/match/0/www_example_com
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.oauth2:
          '@type': type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2PerRoute
          config:
            authScopes:
            - openid
            authType: BASIC_AUTH
            authorizationEndpoint: https://oauth.foo.com/oauth2/v2/auth
            credentials:
              clientId: client1.apps.googleusercontent.com
              cookieNames:
                bearerToken: AccessToken-b0a1b740
                idToken: IdToken-b0a1b740
                oauthExpires: OauthExpires-b0a1b740
                oauthHmac: OauthHMAC-b0a1b740
                oauthNonce: OauthNonce-b0a1b740
                refreshToken: RefreshToken-b0a1b740
              hmacSecret:
                name: oauth2/hmac_secret/securitypolicy/envoy-gateway/policy-for-gateway
                sdsConfig:
                  ads: {}
                  initialFetchTimeout: 0s
                  resourceApiVersion: V3
              tokenSecret:
                name: oauth2/client_secret/securitypolicy/envoy-gateway/policy-for-gateway
                sdsConfig:
                  ads: {}
                  initialFetchTimeout: 0s
                  resourceApiVersion: V3
            defaultExpiresIn: 1800s
            defaultRefreshTokenExpiresIn: 86400s
            forwardBearerToken: true
            redirectPathMatcher:
              path:
                exact: /bar/oauth2/callback
            redirectUri: https://www.example.com/bar/oauth2/callback
            retryPolicy:
              numRetries: 3
              retryBackOff:
                baseInterval: 1s
                maxInterval: 5s
              retryOn: 5xx,gateway-error,reset
            signoutPath:
              path:
                exact: /bar/logout
            statPrefix: securitypolicy/envoy-gateway/policy-for-gateway
            tokenEndpoint:
              cluster: oauth_foo_com_443
              timeout: 5s
              uri: https://oauth.foo.com/token
            useRefreshToken: true
